syntax = "proto3";

package cheers.account.v1;


import "google/api/annotations.proto";

option java_multiple_files = true;
option go_package = "github.com/salazarhugo/cheers1/gen/go/cheers/account/v1;account";

service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {
    option (google.api.http) = {
      post: "/v1/accounts"
      body: "*"
    };
  }

  rpc GetAccount (GetAccountRequest) returns (GetAccountResponse) {
    option (google.api.http) = {
      get: "/v1/accounts/{account_id}"
    };
  }

  rpc UpdateAccount (UpdateAccountRequest) returns (UpdateAccountResponse) {
    option (google.api.http) = {
      patch: "/v1/accounts"
      body: "*"
    };
  }

  rpc DeleteAccount (DeleteAccountRequest) returns (DeleteAccountResponse) {
    option (google.api.http) = {
      delete: "/v1/accounts/{account_id}"
    };
  }

  rpc ListAccount (ListAccountRequest) returns (ListAccountResponse) {
    option (google.api.http) = {
      get: "/v1/accounts/list"
    };
  }
}

message Account {
  string id = 1;
  int32 balance = 2;
  int32 ticket_sold = 3;
}

message CreateAccountRequest {
  Account account = 1;
}

message CreateAccountResponse {
  Account account = 1;
}

message GetAccountRequest {
  string account_id = 1;
}

message GetAccountResponse {
  Account account = 1;
}

message UpdateAccountRequest {
  Account account = 1;
}

message UpdateAccountResponse {
  Account account = 1;
}

message DeleteAccountRequest {
  string account_id = 1;
}

message DeleteAccountResponse {
}

message ListAccountRequest {
  oneof filter {
    string party_id = 1;
    string account_id = 2;
  }
}

message ListAccountResponse {
  repeated Account accounts = 1;
}